# AKM

./: LICENSE  README.md  pyproject.toml  setup.cfg  solution.md
doublethink/: __init__.py  cli.py  html_analyzer.py  output_rich.py  reporting.py  rules.py  tui.py  url_analyzer.py
linksentry/: cli.py
rules/: weights.yml
tests/: test_cli.py  test_html_analyzer.py  test_url_analyzer.py
