[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doublethink"
version = "0.1.0"
description = "DoubleThink - simple URL & HTML analyzer"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["samples*", "rules*", "tests*"]
